--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Kevin Shao</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<!-- <li><a href="/experience">Experience</a></li> -->
+			<!-- <li><a href="/project">Project</a></li> -->
+        		<!-- <li><a href="/research">Research</a></li> -->
+			<!-- <li><a href="/activity">Activity</a></li> -->
+        		<li><a href="/cv">CV</a></li>
+			<li><a href="/Contact">Contact</a></li>
+    		</ul>
+		</nav>
+		<p1>Contact Information</p1>
+			<ul>
+                           <li>Kevin Shao</li>
+                           <li>Email: shao.383@osu.edu</li>
+                        </ul>  
+		<!-- <footer>
+    		<ul>
+        		<!-- <li><a href="mailto:XXX">email</a></li> -->
+		<!-- </ul>
+		</footer> -->
+	</body>
+</html>
