--- a/Contact.html
+++ b/Contact.html
@@ -9,8 +9,8 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<!-- <li><a href="/experience">Experience</a></li> -->
-			<!-- <li><a href="/project">Project</a></li> -->
+	        	<li><a href="/experience">Experience</a></li>
+			<li><a href="/project">Project</a></li>
         		<!-- <li><a href="/research">Research</a></li> -->
 			<!-- <li><a href="/activity">Activity</a></li> -->
         		<li><a href="/cv">CV</a></li>
