--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
 		<p1>Contact Information</p1>
 			<ul>
                            <li>Kevin Shao</li>
-                           <li>Email: shao.383@osu.edu</li>
+                           <li>Email: kshao918@uw.edu</li>
                         </ul>  
 		<!-- <footer>
     		<ul>
