--- a/experience.html
+++ b/experience.html
@@ -19,11 +19,13 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<p1>Graduate Teaching Assistant (UW EE 215)</p1>
+			<p1>Graduate Teaching Assistant (UW EE 215, Study Abroad Program EE 215 in Lausanne, Switzerland)</p1>
 			<ul>
                            <li>Prepare materials and conduct quiz sections/lab meetings</li>
 			   <li>Hold regular office hours, tutor students, and manage and respond to course-related emails</li>
                            <li>Proctor exams, grade exams and lab reports, and attend instructor/TA meetings</li>
+			   <li>Create and re-organize the review materials and problem sets served in quiz sessions</li>
+			   <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for the Engineering Switzerland Study Abroad Program led by Prof. Karl Böhringer</li>
                         </ul> 
 			<hr>
 			<p1>Undergraduate Teaching Assistant (OSU ENGR 1181 and 1182)</p1>
