--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/experience">Experience</a></li>
 			<li><a href="/project">Project</a></li>
-        		<!-- <li><a href="/research">Research</a></li> -->
+        		<li><a href="/research">Research</a></li>
 			<!-- <li><a href="/activity">Activity</a></li> -->
         		<li><a href="/cv">CV</a></li>
 			<li><a href="/Contact">Contact</a></li>
