--- a/gallary.html
+++ b/gallary.html
@@ -1,1 +1,125 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
+    <title>CP1</title>
+  </head>
+  <body>
+    <section class="display-flex">
+      <h1>Welcome to Kevin's Homepage!</h1>
+      <nav>
+        <ul>
+          <li><a href="about.html">Home</a></li>
+          <li><a href="hobby.html">Hobby</a></li>
+        </ul>
+      </nav>
+    </section>
 
+    <header>
+      <h1 class="h1-header">TRAVEL SHOWCASE</h1>
+    </header>
+
+    <section>
+      <p>
+        Since my childhood, I love traveling with my family and friends in my free time.
+        I have been visited lots of places in 15 countries in the past decades. Here is
+        a list of countries I visited before.
+      </p>
+      <ul>
+        <li>North America: United States, Canada</li>
+        <li>Europe: Germany, Switzerland, France, Italy, Vatican City, Austria, Hungary,
+          Czechia, Slovakia, United Kingdom, Netherlands, Belgium, Luxembourg
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Alaska, AK (2023.9)</h2>
+      <p class="justified">
+        Right before the fall quarter, my friends and I had a vacation trip to Alaska.
+        We watched the aurora in Fairbanks and visted XXX. We also went to one of Alaska's
+        most accessible glacier, Matanuska Glacier, two hours away from Anchorage, AK.
+        Last but not least, we took the cruise to visit Kenai Fjords National Park near
+        Sewards, AK.
+      </p>
+
+      <div class="image-container">
+        <div class="image-box">
+          <img src="img/aurora.jpg" alt="Aurora view at Chena Lake Recreation Area in Fairbanks. AK.">
+          <p class="centered">Aurora view at Chena Lake</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/glaciermatanuska.jpg" alt="Glacier view at Matanuska Glacier">
+          <p class="centered">Glacier view at Matanuska Glacier</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/glacierair.jpg" alt="Glacier view on the aircraft">
+          <p class="centered">Glacier view taken on the aircraft</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/onglacier.jpg" alt="Glacier hiking">
+          <p class="centered">Hike at Matanuska Glacier</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/glacierkenai.jpg" alt="Glacier view at Kenai Fjords National Park">
+          <p class="centered">Glacier view at Kenai Fjords National Park</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/ocean.jpg" alt="Ocean view">
+          <p class="centered">Ocean view on the cruise</p>
+        </div>
+      </div>
+
+      <h2>Switzerland (2023.8 - 2023.9)</h2>
+      <p class="justified">
+        This summer, I joined and served as a teaching assistant for Engineering Switzerland Study
+        Abroad Program at EPFL in Lausanne. Within the program, the whole group went to Matterhorn
+        at Zermatt, a small town very close to Italy.
+      </p>
+
+      <div class="image-container">
+        <div class="image-box">
+          <img src="img/glacierview.jpg" alt="Glacier view">
+          <p class="centered">Glacier view</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/matterhorn.jpg" alt="Mountain view in front of the Matterhorn">
+          <p class="centered">Mountain view in front of the Matterhorn</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/reflection.jpg" alt="Lake reflection of the Matterhorn">
+          <p class="centered">Lake reflection of the Matterhorn</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/matterhornview.jpg" alt="Matterhorn Gotthard Railway">
+          <p class="centered">Matterhorn Gotthard Railway</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/sheep.jpg" alt="Black nose sheep">
+          <p class="centered">Black nose sheep</p>
+        </div>
+
+        <div class="image-box">
+          <img src="img/sunset.jpg" alt="Sunset at the apartment">
+          <p class="centered">Sunset in Lausanne, Switzerland</p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p class="centered">
+        Site created by Kevin Shao. All other attributions cited in page source.
+      </p>
+    </footer>
+  </body>
+</html>
