--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<!-- <li><a href="/activity">Activity</a></li> -->
         		<li><a href="/cv">CV</a></li>
 			<li><a href="/Contact">Contact</a></li>
+			<li><a href="/gallary">Gallary</a></li>
     		</ul>
 		</nav>
 		<div class="container">
