--- a/index.html
+++ b/index.html
@@ -7,39 +7,59 @@
 	</head>
 	<body>
 		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-			<li><a href="/experience">Experience</a></li>
-			<li><a href="/project">Project</a></li>
-        		<li><a href="/research">Research</a></li>
-			<!-- <li><a href="/activity">Activity</a></li> -->
-        		<li><a href="/cv">CV</a></li>
-			<li><a href="/Contact">Contact</a></li>
-			<li><a href="/gallary">Gallary</a></li>
-    		</ul>
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/experience">Experience</a></li>
+				<li><a href="/project">Project</a></li>
+				<li><a href="/research">Research</a></li>
+				<!--<li><a href="/experience">Experience</a></li> -->
+				<li><a href="/Contact">Contact</a></li>
+				<li><a href="/gallary">Gallary</a></li>
+			</ul>
 		</nav>
-		<div class="container">
-    		<div class="blurb">
-			<div class = "columnA">
-        		
-			<img class="image" src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/image.jpg" alt="" width="300" height="210"> </img>
-                        <h1>Kevin Shao</h1>
-			<p>Electrical and Computer Engineering</p>
-			<p>University of Washington - Seattle</p>
-			</div>
-			
-			<div class = "columnB">
-				<h1>About Me</h1>
-				<p>My name is Kevin(Zhongyang) Shao, and I am a first-year master student under the department of Electrical and Computer Engineering at the Univeristy of Washington, Seattle. I completed my bachelor degree with Magna Cum Laude in Electrical and Computer Engineering at The Ohio State Univeristy. I was a member of OSU Humanitarian Engineering Scholar Program. In my free time, I love to travel to see unqiue culture and history from different countries. Sketching and painting are also some great ways to make me relaxed. I worked on a number of research projects in applications to machine learning (i.e. object detection and tracking). I am very interested in interdisciplinary research to develope innovative technologies or systems, especially with the combination with healthcare, education and HCI.</p>
-			</div>
-		</div><!-- /.blurb -->
-		</div><!-- /.container -->		
+		<header>
+			<h1 class="h1-header">ABOUT ME</h1>
+		</header>
 
-	
+		    <section id="profile-section">
+		      <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
+		      <section>
+		        <p>
+		          My name is Kevin Shao, a 2nd-year master student studying in Electrical and
+		          Computer Engineering. I completed my bachelor degree with Magna Cum Laude
+		          in Electrical and Computer Engineering at The Ohio State Univeristy. I was
+		          a member of OSU Humanitarian Engineering Scholar Program. In my free time,
+		          I love to travel to see unqiue culture and history from different countries.
+		          Sketching and painting are also some great ways to make me relaxed. I worked
+		          on a number of research projects in applications to machine learning (i.e.
+		          object detection and tracking). I am very interested in interdisciplinary
+		          research to develope innovative technologies or systems, especially human-computer
+		          interaction in healthcare and education.
+		        </p>
+		        <hr>
+		        <h3>Education</h3>
+		        <ul>
+		          <li>
+		            <span class="fas fa-graduation-cap"></span>
+		            <section class="details-container">
+		              <p class="course">MS in Electrical and Computer Engineering (Expected: 2024/06)</p>
+		              <p class="institution">University of Washington Seattle</p>
+		            </section>
+		          </li>
+		          <li>
+		            <span class="fas fa-graduation-cap"></span>
+		            <section class="details-container">
+		              <p class="course">BS in Electrical and Computer Engineering</p>
+		              <p class="institution">The Ohio State Univeristy</p>
+		            </section>
+		          </li>
+		        </ul>
+		      </section>
+		    </section>
 		<footer>
-    		<ul>
-        		<!-- <li><a href="mailto:XXX">email</a></li> -->
-		</ul>
-		</footer>
+      <p class="centered">
+        Site created by Kevin Shao. All other attributions cited in page source.
+      </p>
+    </footer>
 	</body>
 </html>
