--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	  <title>Kevin Shao</title>
 	  <!-- link to main stylesheet -->
-	  <link rel="stylesheet" type="text/css" href="/css/style.css">
+	  <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
 	  <nav>
