--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
- <head>
-   <title>Kevin Shao</title>
-   <!-- link to main stylesheet -->
-   <link rel="stylesheet" type="text/css" href="/css/styles.css">
- </head>
- <body>
+ <html lang="en">
+  <head>
+		 <title>Kevin Shao</title>
+		 <!-- link to main stylesheet -->
+		 <link rel="stylesheet" type="text/css" href="/css/styles.css">
+   <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
+	</head>
+	<body>
     <section class="display-flex">
       <h1>Welcome to Kevin's Homepage!</h1>
       <nav>
@@ -20,7 +22,7 @@
         </ul>
       </nav>
     </section>
-    <header>
+	  	<header>
       <h1 class="h1-header">ABOUT ME</h1>
     </header>
 
@@ -59,10 +61,10 @@
         </ul>
       </section>
     </section>
-    <footer>
+		  <footer>
       <p class="centered">
         Site created by Kevin Shao. All other attributions cited in page source.
       </p>
     </footer>
- </body>
+	</body>
 </html>
