--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
     <section class="display-flex">
-      <h1>Welcome to Kevin's Homepage!</h1>
+      <h1>Kevin Shao</h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
