update-styles-index

--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
 	</head>
 	<body>
-    <section class="display-flex">
+    <section id="nav-bar">
       <h1>Kevin Shao</h1>
       <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/experience">Experience</a></li>
-          <li><a href="/project">Project</a></li>
-          <li><a href="/research">Research</a></li>
-          <!--<li><a href="/experience">Experience</a></li> -->
-          <li><a href="/gallary">Gallary</a></li>
-          <li><a href="/Contact">Contact</a></li>
-        </ul>
+        <a href="/">Home</a>
+        <a href="/experience">Experience</a>
+        <a href="/project">Project</a>
+        <a href="/research">Research</a>
+        <!--<li><a href="/experience">Experience</a></li> -->
+        <a href="/gallary">Gallary</a>
+        <a href="/Contact">Contact</a>
       </nav>
     </section>
     <header>
