update-gallary-styles

--- a/gallary.html
+++ b/gallary.html
@@ -7,13 +7,16 @@
     <title>CP1</title>
   </head>
   <body>
-    <section class="display-flex">
-      <h1>Welcome to Kevin's Homepage!</h1>
+    <section id="nav-bar">
+      <h1>Kevin Shao</h1>
       <nav>
-        <ul>
-          <li><a href="about.html">Home</a></li>
-          <li><a href="hobby.html">Hobby</a></li>
-        </ul>
+        <a href="/">Home</a>
+        <a href="/experience">Experience</a>
+        <a href="/project">Project</a>
+        <a href="/research">Research</a>
+        <!--<li><a href="/experience">Experience</a></li> -->
+        <a href="/gallary">Gallary</a>
+        <a href="/Contact">Contact</a>
       </nav>
     </section>
 
