--- a/experience.html
+++ b/experience.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Kevin Shao</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/experience">Experience</a></li>
-			<li><a href="/project">Project</a></li>
-        		<li><a href="/research">Research</a></li>
-			<!-- <li><a href="/activity">Activity</a></li> -->
-        		<li><a href="/cv">CV</a></li>
-			<li><a href="/Contact">Contact</a></li>
-    		</ul>
-		</nav>
+		<section id="nav-bar">
+      <h1>Kevin Shao</h1>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/experience">Experience</a>
+        <a href="/project">Project</a>
+        <a href="/research">Research</a>
+        <!--<li><a href="/experience">Experience</a></li> -->
+        <a href="/gallary">Gallary</a>
+        <a href="/Contact">Contact</a>
+      </nav>
+    </section>
+    <header>
+      <h1 class="h1-header">ABOUT ME</h1>
+    </header>
+
 		<div class="container">
     		<div class="blurb">
 			<p1>Graduate Teaching Assistant (UW EE 215, Study Abroad Program EE 215 in Lausanne, Switzerland)</p1>
@@ -26,7 +31,7 @@
                            <li>Proctor exams, grade exams and lab reports, and attend instructor/TA meetings</li>
 			   <li>Create and re-organize the review materials and problem sets served in quiz sessions</li>
 			   <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for the Engineering Switzerland Study Abroad Program led by Prof. Karl Böhringer</li>
-                        </ul> 
+                        </ul>
 			<hr>
 			<p1>Undergraduate Teaching Assistant (OSU ENGR 1181 and 1182)</p1>
 			<ul>
@@ -34,7 +39,7 @@
 			   <li>Attended assigned class and lab session to assist students in their development of basic skills in laboratories and lectures</li>
                            <li>Graded assignments, hold office hours, and conducted review sessions to help students prepare for exams</li>
                            <li>Joined in SILT(Student Instructional Leadership Team) Mentorship Program to share experience with new teaching assistants and freshman in the College of Engineering</li>
-                        </ul>  
+                        </ul>
 			<hr>
 			<p1>Humanitarian Engineering Scholar Program (Faculty Leader: Rachel Tuttle)</p1>
 			<ul>
@@ -42,12 +47,12 @@
                            <li>Engineering concepts are applied to create solutions for local community via attending various community service</li>
                            <li>Established understanding of humanitarian engineering-related concepts which covered in 1181.02 and 1182.02, including varying hands-on team labs and a team design-build project (Advanced Energy Vehicle)</li>
 			   <li>Participated in a team design-build program (Toy Adaptation Program) to help children with disabilities</li>
-                        </ul>  
+                        </ul>
 
 		</div><!-- /.blurb -->
-		</div><!-- /.container -->		
+		</div><!-- /.container -->
 
-    
+
 		<footer>
     		<ul>
         		<!-- <li><a href="mailto:XXX">email</a></li> -->
