--- a/gallary.html
+++ b/gallary.html
@@ -21,7 +21,7 @@
     </section>
 
     <header>
-      <h1 class="h1-header">TRAVEL SHOWCASE</h1>
+      <h1 class="h1-header">TRAVEL GALLARY</h1>
     </header>
 
     <section>
