--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Kevin Shao</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/common.css">
+		<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<section id="nav-bar">
@@ -23,40 +24,37 @@
     </header>
 
 		<div class="container">
-    		<div class="blurb">
-			<p1>Graduate Teaching Assistant (UW EE 215, Study Abroad Program EE 215 in Lausanne, Switzerland)</p1>
-			<ul>
-                           <li>Prepare materials and conduct quiz sections/lab meetings</li>
-			   <li>Hold regular office hours, tutor students, and manage and respond to course-related emails</li>
-                           <li>Proctor exams, grade exams and lab reports, and attend instructor/TA meetings</li>
-			   <li>Create and re-organize the review materials and problem sets served in quiz sessions</li>
-			   <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for the Engineering Switzerland Study Abroad Program led by Prof. Karl Böhringer</li>
-                        </ul>
-			<hr>
-			<p1>Undergraduate Teaching Assistant (OSU ENGR 1181 and 1182)</p1>
-			<ul>
-                           <li>Explored and led in-depth on various classical topics and design projects in the engineering field ranging from designing self-protection devices to safer storage system for grains with instructional team and students in the phase of the problem definition involved research plan, user needs, and value proposition, concept development, and detailed design.</li>
-			   <li>Attended assigned class and lab session to assist students in their development of basic skills in laboratories and lectures</li>
-                           <li>Graded assignments, hold office hours, and conducted review sessions to help students prepare for exams</li>
-                           <li>Joined in SILT(Student Instructional Leadership Team) Mentorship Program to share experience with new teaching assistants and freshman in the College of Engineering</li>
-                        </ul>
-			<hr>
-			<p1>Humanitarian Engineering Scholar Program (Faculty Leader: Rachel Tuttle)</p1>
-			<ul>
-                           <li>Contributed to the thought and dialogue needed to create change in the value system of Humanitarian Engineering by exploring an ethical framework</li>
-                           <li>Engineering concepts are applied to create solutions for local community via attending various community service</li>
-                           <li>Established understanding of humanitarian engineering-related concepts which covered in 1181.02 and 1182.02, including varying hands-on team labs and a team design-build project (Advanced Energy Vehicle)</li>
-			   <li>Participated in a team design-build program (Toy Adaptation Program) to help children with disabilities</li>
-                        </ul>
-
-		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-
-
+			<div class="blurb">
+				<p1>Graduate Teaching Assistant (UW EE 215, Study Abroad Program EE 215 in Lausanne, Switzerland)</p1>
+				<ul>
+					<li>Prepare materials and conduct quiz sections/lab meetings</li>
+					<li>Hold regular office hours, tutor students, and manage and respond to course-related emails</li>
+					<li>Proctor exams, grade exams and lab reports, and attend instructor/TA meetings</li>
+			    <li>Create and re-organize the review materials and problem sets served in quiz sessions</li>
+			    <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for the Engineering Switzerland Study Abroad Program led by Prof. Karl Böhringer</li>
+				</ul>
+				<hr>
+				<p1>Undergraduate Teaching Assistant (OSU ENGR 1181 and 1182)</p1>
+				<ul>
+					<li>Explored and led in-depth on various classical topics and design projects in the engineering field ranging from designing self-protection devices to safer storage system for grains with instructional team and students in the phase of the problem definition involved research plan, user needs, and value proposition, concept development, and detailed design.</li>
+			    <li>Attended assigned class and lab session to assist students in their development of basic skills in laboratories and lectures</li>
+					<li>Graded assignments, hold office hours, and conducted review sessions to help students prepare for exams</li>
+          <li>Joined in SILT(Student Instructional Leadership Team) Mentorship Program to share experience with new teaching assistants and freshman in the College of Engineering</li>
+        </ul>
+				<hr>
+			  <p1>Humanitarian Engineering Scholar Program (Faculty Leader: Rachel Tuttle)</p1>
+			  <ul>
+          <li>Contributed to the thought and dialogue needed to create change in the value system of Humanitarian Engineering by exploring an ethical framework</li>
+          <li>Engineering concepts are applied to create solutions for local community via attending various community service</li>
+          <li>Established understanding of humanitarian engineering-related concepts which covered in 1181.02 and 1182.02, including varying hands-on team labs and a team design-build project (Advanced Energy Vehicle)</li>
+			    <li>Participated in a team design-build program (Toy Adaptation Program) to help children with disabilities</li>
+        </ul>
+			</div>
+		</div>
 		<footer>
-    		<ul>
-        		<!-- <li><a href="mailto:XXX">email</a></li> -->
-		</ul>
+			<p class="centered">
+				Site created by Kevin Shao. All other attributions cited in page source.
+	    </p>
 		</footer>
 	</body>
 </html>
