--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
 
 		<div class="container">
 			<div class="blurb">
-				<p1>Graduate Teaching Assistant (UW EE 215, Study Abroad Program EE 215 in Lausanne, Switzerland)</p1>
+				<h3>Graduate Teaching Assistant (UW EE 215, Study Abroad Program EE 215 in Lausanne, Switzerland)</h3>
 				<ul>
 					<li>Prepare materials and conduct quiz sections/lab meetings</li>
 					<li>Hold regular office hours, tutor students, and manage and respond to course-related emails</li>
