--- a/experience.html
+++ b/experience.html
@@ -23,9 +23,9 @@
       <h1 class="h1-header">ABOUT ME</h1>
     </header>
 
-		<div class="container">
+		<section class="container">
 			<div class="blurb">
-				<h3>Graduate Teaching Assistant (UW EE 215, Study Abroad Program EE 215 in Lausanne, Switzerland)</h3>
+				<h3>Graduate Teaching Assistant (UW EE 215, Engineering Switzerland Study Abroad Program EE 215)</h3>
 				<ul>
 					<li>Prepare materials and conduct quiz sections/lab meetings</li>
 					<li>Hold regular office hours, tutor students, and manage and respond to course-related emails</li>
@@ -34,7 +34,7 @@
 			    <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for the Engineering Switzerland Study Abroad Program led by Prof. Karl Böhringer</li>
 				</ul>
 				<hr>
-				<p1>Undergraduate Teaching Assistant (OSU ENGR 1181 and 1182)</p1>
+				<h3>Undergraduate Teaching Assistant (OSU ENGR 1181 and 1182)</h3>
 				<ul>
 					<li>Explored and led in-depth on various classical topics and design projects in the engineering field ranging from designing self-protection devices to safer storage system for grains with instructional team and students in the phase of the problem definition involved research plan, user needs, and value proposition, concept development, and detailed design.</li>
 			    <li>Attended assigned class and lab session to assist students in their development of basic skills in laboratories and lectures</li>
@@ -42,7 +42,7 @@
           <li>Joined in SILT(Student Instructional Leadership Team) Mentorship Program to share experience with new teaching assistants and freshman in the College of Engineering</li>
         </ul>
 				<hr>
-			  <p1>Humanitarian Engineering Scholar Program (Faculty Leader: Rachel Tuttle)</p1>
+			  <h3>Humanitarian Engineering Scholar Program (Faculty Leader: Rachel Tuttle)</h3>
 			  <ul>
           <li>Contributed to the thought and dialogue needed to create change in the value system of Humanitarian Engineering by exploring an ethical framework</li>
           <li>Engineering concepts are applied to create solutions for local community via attending various community service</li>
@@ -50,7 +50,7 @@
 			    <li>Participated in a team design-build program (Toy Adaptation Program) to help children with disabilities</li>
         </ul>
 			</div>
-		</div>
+		</section>
 		<footer>
 			<p class="centered">
 				Site created by Kevin Shao. All other attributions cited in page source.
