--- a/cv.html
+++ b/cv.html
@@ -3,25 +3,26 @@
 	<head>
 		<title>Kevin Shao</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="/css/common.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/experience">Experience</a></li>
-			<li><a href="/project">Project</a></li>
-        		<li><a href="/research">Research</a></li>
-			<!-- <li><a href="/activity">Activity</a></li> -->
-        		<li><a href="/cv">CV</a></li>
-			<li><a href="/Contact">Contact</a></li>
-    		</ul>
-		</nav>
+		<section id="nav-bar">
+      <h1>Kevin Shao</h1>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/experience">Experience</a>
+        <a href="/project">Project</a>
+        <a href="/research">Research</a>
+        <!--<li><a href="/experience">Experience</a></li> -->
+        <a href="/gallary">Gallary</a>
+        <a href="/Contact">Contact</a>
+      </nav>
+    </section>
 		<iframe src="Resume.pdf" width="100%" height="600px">
-		<!-- <footer>
-    		<ul>
-        		<!-- <li><a href="mailto:XXX">email</a></li> -->
-		<!-- </ul>
-		</footer> -->
+			<footer>
+				<p class="centered">
+					Site created by Kevin Shao. All other attributions cited in page source.
+				</p>
+			</footer>
 	</body>
 </html>
