--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
       </nav>
     </section>
     <header>
-      <h1 class="h1-header">ABOUT ME</h1>
+      <h1 class="h1-header">EXPERIENCE</h1>
     </header>
 
 		<section class="container">
