--- a/gallary.html
+++ b/gallary.html
@@ -15,6 +15,7 @@
         <a href="/project">Project</a>
         <a href="/research">Research</a>
         <!--<li><a href="/experience">Experience</a></li> -->
+        <a href="/cv">CV</a>
         <a href="/gallary">Gallary</a>
         <a href="/Contact">Contact</a>
       </nav>
