--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Kevin Shao</title>
 		<!-- link to main stylesheet -->
@@ -15,6 +15,7 @@
         <a href="/project">Project</a>
         <a href="/research">Research</a>
         <!--<li><a href="/experience">Experience</a></li> -->
+				<a href="/cv">CV</a>
         <a href="/gallary">Gallary</a>
         <a href="/Contact">Contact</a>
       </nav>
