--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Kevin Shao</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/common.css">
 	</head>
 	<body>
 		<section id="nav-bar">
