--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--<li><a href="/experience">Experience</a></li> -->
         <a href="/cv">CV</a>
         <a href="/gallary">Gallary</a>
-        <a href="/Contact">Contact</a>
+        <a href="/contact">Contact</a>
       </nav>
     </section>
     <header>
