--- a/project.html
+++ b/project.html
@@ -6,17 +6,22 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/experience">Experience</a></li>
-			<li><a href="/project">Project</a></li>
-        		<li><a href="/research">Research</a></li>
-			<!-- <li><a href="/activity">Activity</a></li> -->
-        		<li><a href="/cv">CV</a></li>
-			<li><a href="/Contact">Contact</a></li>
-    		</ul>
-		</nav>
+		<section id="nav-bar">
+      <h1>Kevin Shao</h1>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/experience">Experience</a>
+        <a href="/project">Project</a>
+        <a href="/research">Research</a>
+        <!--<li><a href="/experience">Experience</a></li> -->
+				<a href="/cv">CV</a>
+        <a href="/gallary">Gallary</a>
+        <a href="/contact">Contact</a>
+      </nav>
+    </section>
+    <header>
+      <h1 class="h1-header">PROJECT</h1>
+    </header>
 		<div class="container">
     		<div class="blurb">
 			<p1>Making Electric Vehicle Charging Fun</p1>
@@ -30,14 +35,14 @@
 			   <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture3_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
 		           <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture4_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
 			   <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture5_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
-                        </ul>  
+                        </ul>
 			<hr>
 			<p1>Design Challenge</p1>
 			<ul>
                            <li>Instead of plasterboard, which can melt or mold when exposed to water, the design is made of EPS foam, and structural laminates are used for the walls, floors, and roof, making the Casita house stronger and more durable than ordinary buildings</li>
 			   <li>Sought out the lowest cost prefabricated materials and broke new ground in the structural and technical areas</li>
                            <li>Conducted the building process as a Humanitarian Engineering Scholar to help people in need</li>
-                        </ul>  
+                        </ul>
 			<hr>
 			<p1>Advanced Energy Vehicle</p1>
 			<ul>
@@ -45,18 +50,18 @@
                            <li>Developed Advanced Energy Vehicles (AEVs) and verified the performance of AEVs by structural Analysis Simulation and CFD Flow Simulation, which provided a reference for AEVs structure analysis and optimization</li>
 			   <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture1.png" alt="" width="300" height="210" style="padding-right: 50px; padding-top: 20px"> </img>
                            <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture2.png" alt="" width="300" height="210" style="padding-top: 20px"> </img>
-                        </ul>  
+                        </ul>
 			<hr>
 			<p1>Software Design Project</p1>
 			<ul>
                            <li>Combined problem-solving strategies, design process, and programming skills in a team setting to propose an applied Smart AI technology exercise for both Hangman and Connect Four in Matlab</li>
                            <li>Realized the visualization function based on programming and modeling</li>
                            <li>Revised with trial and error by execution result by implementing of hand method of both games</li>
-                        </ul>  
+                        </ul>
 		</div><!-- /.blurb -->
-		</div><!-- /.container -->		
+		</div><!-- /.container -->
 
-    
+
 		<footer>
     		<ul>
         		<!-- <li><a href="mailto:XXX">email</a></li> -->
