--- a/research.html
+++ b/research.html
@@ -17,11 +17,11 @@
         <!--<li><a href="/experience">Experience</a></li> -->
 				<a href="/cv">CV</a>
         <a href="/gallary">Gallary</a>
-        <a href="/Contact">Contact</a>
+        <a href="/contact">Contact</a>
       </nav>
     </section>
     <header>
-      <h1 class="h1-header">EXPERIENCE</h1>
+      <h1 class="h1-header">RESEARCH</h1>
     </header>
 		<section class="container">
 			<div class="blurb">
