--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
         <!--<li><a href="/experience">Experience</a></li> -->
 				<a href="/cv">CV</a>
         <a href="/gallary">Gallary</a>
-        <a href="/Contact">Contact</a>
+        <a href="/contact">Contact</a>
       </nav>
     </section>
     <header>
