--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@
         </video>
 			</ul>
 			<hr>
-			<p1>Machine Learning Application Research (Assistant Professor: Pengtao Xie)</p1>
+			<h3>Machine Learning Application Research (Assistant Professor: Pengtao Xie)</h3>
 			<ul>
 				<li>A DARTS structure-based machine learning method is proposed, which can learn Spatio-temporal data end-to-end using a spatial model, and thus apply it in the simulation of the model of COVID-Net.</li>
         <li>Presented a multi-level optimization framework to formulate LBT which involves three learning stages: teacher learns; teacher teaches student; teacher and student validate themselves.</li>
