--- a/project.html
+++ b/project.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Kevin Shao</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="/css/common.css">
+		<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<section id="nav-bar">
