--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,10 @@
         <a href="/contact">Contact</a>
       </nav>
     </section>
+		<section class="container">
 		<iframe src="Resume.pdf" width="100%" height="600px">
+		</iframe>
+		</section>
 			<footer>
 				<p class="centered">
 					Site created by Kevin Shao. All other attributions cited in page source.
