--- a/experience.html
+++ b/experience.html
@@ -3,8 +3,9 @@
 	<head>
 		<title>Kevin Shao</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/common.css">
+		<link rel="stylesheet" href="/css/common.css">
 		<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
+		<script src="index.js"></script>
 	</head>
 	<body>
 		<section id="nav-bar">
@@ -26,13 +27,14 @@
 
 		<section class="container">
 			<div class="blurb">
-				<h3>Graduate Teaching Assistant (UW EE 215, Engineering Switzerland Study Abroad Program EE 215)</h3>
+				<h3>Graduate Teaching Assistant (UW EE 215, <span class="hover-target">Engineering Switzerland Study Abroad Program</span> EE 215)</h3>
+				<img id="groupImage" src="img/aurora.jpg" alt="Group Image" style="display: none;">
 				<ul>
 					<li>Prepare materials and conduct quiz sections/lab meetings</li>
 					<li>Hold regular office hours, tutor students, and manage and respond to course-related emails</li>
 					<li>Proctor exams, grade exams and lab reports, and attend instructor/TA meetings</li>
 			    <li>Create and re-organize the review materials and problem sets served in quiz sessions</li>
-			    <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for<a href="https://sites.google.com/uw.edu/engineering-switzerland/home">Engineering Switzerland Study Abroad Program</a> led by Prof. Karl Böhringer</li>
+			    <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for <a href="https://sites.google.com/uw.edu/engineering-switzerland/home">Engineering Switzerland Study Abroad Program</a> led by Prof. Karl Böhringer</li>
 				</ul>
 				<hr>
 				<h3>Undergraduate Teaching Assistant (OSU ENGR 1181 and 1182)</h3>
