--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
 		<section class="container">
 			<div class="blurb">
 				<h3>Graduate Teaching Assistant (UW EE 215, <span class="hover-target">Engineering Switzerland Study Abroad Program</span> EE 215)</h3>
-				<img id="groupImage" src="img/aurora.jpg" alt="Group Image" style="display: none;">
+				<img id="groupImage" src="img/group.jpg" alt="Group Image" style="display: none;">
 				<ul>
 					<li>Prepare materials and conduct quiz sections/lab meetings</li>
 					<li>Hold regular office hours, tutor students, and manage and respond to course-related emails</li>
