--- a/experience.html
+++ b/experience.html
@@ -27,7 +27,9 @@
 
 		<section class="container">
 			<div class="blurb">
-				<h3>Graduate Teaching Assistant (UW EE 215, <span class="hover-target">Engineering Switzerland Study Abroad Program</span> EE 215)</h3>
+				<h3>Graduate Teaching Assistant (Univeristy of Washington, Seattle, WA)</h3>
+				<h5>EE 215, Jan 2023 - Present</h5>
+				<h5><span class="hover-target">Engineering Switzerland Study Abroad Program</span> EE 215</h5>
 				<img id="groupImage" src="img/group.jpg" alt="Group Image" style="display: none;">
 				<ul>
 					<li>Prepare materials and conduct quiz sections/lab meetings.</li>
