--- a/experience.html
+++ b/experience.html
@@ -27,6 +27,11 @@
 
 		<section class="container">
 			<div class="blurb">
+				<div class="position-container">
+					<span class="position-title">Graduate Teaching Assistant</span>
+					<span class="institution">University of Washington</span>
+					<span class="location">Seattle, WA</span>
+			  </div>
 				<h3>Graduate Teaching Assistant (Univeristy of Washington, Seattle, WA)</h3>
 				<h5>EE 215, Jan 2023 - Present</h5>
 				<h5><span class="hover-target">Engineering Switzerland Study Abroad Program</span> EE 215</h5>
